# jarvis-OS

./: .env.example  .gitignore  CDC_jarvis_evolution.md  Dockerfile  Makefile  README.md  RELEASING.md  docker-compose.yml  entrypoint.sh  jarvis  jarvis.ps1  main.py  pyproject.toml  setup.ps1  setup.sh  voice_agent.py
.github/workflows/: build-windows-bundle.yml  ci.yml
agent/: orchestrator.py  project_manager.py  project_store.py  reflexion.py  worker_agent.py  worker_cli.py
analytics/: registry.py
analytics/widgets/: base.py  conso.py  discord.py  github.py  jarvis_stats.py  youtube.py
api/: admin.py  analytics.py  channels.py  globe.py  http.py  http_chat.py  http_config.py  http_connectors.py  http_curator.py  http_proactive.py  http_skills.py  http_system.py  keypad.py  macropad_2k.py  projects.py  voice_ws.py  websocket.py  widgets.py
channels/: base.py  discord_bot.py  gateway.py  signal_bot.py  slack_bot.py  telegram_bot.py  whatsapp.py
config/: backends.py  permissions.yaml  settings.py
docs/: jarvis-os_analyse_detaillee_2026-06-20.md
docs/architecture/: 2026-06-20-reflexion-delegation-multimodele-extensibilite.md  CDC_refonte_architecture.md
docs/migration/: BACKLOG.md
docs/tests/: 2026-06-20-tests-vm-fonctionnement-utilisateur.md
hardware/macropad_2k/: __init__.py  arduino_cli.py  firmware_gen.py  flasher.py  ihex.py  launcher.py  models.py  paths.py  profile_store.py  usb.py
hardware/macropad_2k/firmware/: keypad-studio-profile.json
hardware/macropad_2k/firmware/CH552_HID_Keyboard/: CH552_HID_Keyboard.ino
hardware/macropad_2k/firmware/CH552_HID_Keyboard/src/userUsbHidKeyboard/: usb_string_descriptors.h
keypad/: __init__.py  arduino_cli.py  firmware_gen.py  flasher.py  launcher.py  models.py  profile_store.py
keypad/firmware/CH552_HID_Keyboard/src/userUsbHidKeyboard/: USBconstant.c
llm/: api.py  factory.py  local.py
memory/: auto_dream.py  consolidation.py  kernel.py  search.py  sessions.py
notices/: messaging-gateway.md  skills-learning.md
proactive/: command_center.py  curator.py  engine.py  executor.py  store.py
proactive/collectors/: base.py  email.py  jarvis.py  news.py  weather.py
prompts/: system_static.md
scripts/: dry_run_preset.py  ensure_livekit.sh  install_arduino_cli.py  phase1_real_mission.py  phase2_real_reflexion.py  phase5_real_capability.py  phase6_real_proactive_curator.py  test_llm.py
scripts/migration/: audit_imports.sh  data_state.baseline.txt  routes.baseline.txt  snapshot_data_state.py
scripts/release/: build_bundle.ps1
skills/: base.py  dev_extensions.py  installer.py  lab.py  registry.py  standard.py  synthesizer.py
skills/installed/globe-view/: skill.py  skill.yaml
skills/installed/system-monitor/: skill.py
skills/installed/weather/: skill.py
src/jarvis/: app.py  bootstrap.py
src/jarvis/capabilities/skills/: executor.py  lab.py  lifecycle.py
src/jarvis/capabilities/tools/: capability.py  filesystem.py  gmail.py  notion.py  preset.py  subagent.py  weather.py
src/jarvis/engine/: agent.py  auth.py  gateway.py  tracking.py
src/jarvis/engine/background/: notifications.py  routines.py  scheduler.py  worker.py
src/jarvis/engine/mission/: __init__.py  capability_engine.py  docker_executor.py  file_tool.py  governance.py  orchestrator.py  project_manager.py  project_store.py  quality_checker.py  reflexion.py  schemas.py  verifier.py  worker_agent.py  worker_cli.py
src/jarvis/engine/mission/backends/: __init__.py  base.py  docker.py  local.py  remote.py  rpc.py  ssh.py
src/jarvis/engine/proactive/: command_center.py  context_builder.py  curator.py  engine.py  executor.py  initiative_generator.py
src/jarvis/engine/proactive/collectors/: calendar.py  email.py  tasks.py
src/jarvis/interfaces/api/: admin.py  briefing.py  chat.py  deezer.py  google_oauth.py  http_proactive.py  local_music.py  macropad_2k.py  setup_wizard.py  spotify.py  ui.py  vision.py
src/jarvis/interfaces/api/config/: _env.py  settings.py
src/jarvis/interfaces/channels/: gateway.py  setup.py  telegram_bot.py
src/jarvis/interfaces/ui/static/: _shared.js  briefing.js  capabilities.js  gesture_router.js  home.html  home.js  mediapipe_vision.js  settings.css  settings.js  setup.html  voice_livekit.js  wake_sequence.js
src/jarvis/interfaces/voice/: agent.py
src/jarvis/kernel/: contracts.py  file_lock.py  preflight.py  schemas.py  settings.py
src/jarvis/providers/: youtube.py
src/jarvis/providers/audio/: chunker.py  clap_detector.py  deepgram_receiver.py  receiver.py  stt.py  tts.py
src/jarvis/providers/llm/: api.py  base.py  factory.py
src/jarvis/providers/memory/: ingest.py  search.py
src/jarvis/providers/vision/: face_recognizer.py
tests/: test_auth.py  test_backends.py  test_budget.py  test_capability_engine.py  test_channels.py  test_cli_security.py  test_dev_extensions_inert.py  test_dry_run_preset.py  test_gateway.py  test_governance.py  test_initiatives.py  test_kernel.py  test_llm_tools.py  test_local_mode.py  test_local_music.py  test_memory.py  test_mission_engine.py  test_phase0_schemas.py  test_reflexion.py  test_routines.py  test_routines_api.py  test_settings.py  test_settings_consumers.py  test_skills.py  test_ui_client_config.py  test_verifier.py  test_worker_cli.py
tools/: cli.py  map_control.py  preset.py  show_view.py  skills.py
ui/static/: _shared.js  admin.html  capabilities.css  capabilities.js  command.html  dashboard.css  dashboard.html  dashboard.js  globe.css  globe.js  home.js  index.html  keypad.css  keypad.html  keypad.js  mapbox-style.json  settings.css  settings.html  settings.js
ui/static/skills/globe-view/: globe.css
