[project]
name = "jarvis-v3"
version = "0.1.0"
description = "Jarvis — assistant personnel intelligent vocal temps réel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # LLM providers
    "anthropic>=0.40.0",
    "mistralai>=1.2.0",
    "ollama>=0.4.0",
    # HTTP client (async only)
    "httpx>=0.28.0",
    # Logging
    "loguru>=0.7.2",
    # Tools
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    # Audio
    "faster-whisper>=1.1.0",
    "openai>=1.50.0",
    "numpy>=1.26.0",
    "piper-tts>=1.2.0",
    "RealtimeSTT>=0.3.0",
    "feedparser>=6.0.12",
    "yt-dlp>=2026.3.17",
    "livekit-agents[deepgram,silero,turn-detector]>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "livekit-plugins-elevenlabs>=1.5.1",
    "livekit-api>=1.1.0",
    "sounddevice>=0.5.5",
    "face-recognition>=1.3.0",
    "bambulabs-api>=2.6.6",
    "hidapi>=0.15.0",
    "pyusb>=1.3.1",
    "libusb-package>=1.0.26.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
]
ignore = [
    "ASYNC240",  # pathlib dans async OK — on est sur asyncio, pas trio/anyio
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
